# trotting-tomes-hackathon

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
back/: app.json  db.sqlite3  manage.py  pyproject.toml  requirements.txt  schema.sql
back/app/: admin.py
back/app/migrations/: 0001_initial.py  0002_alter_livro_capa.py  0002_carrinho_compra_alter_autor_options_compralivro_and_more.py  0003_alter_livro_price.py  0003_genero_qntlivros.py  0004_alter_livro_genre.py  0004_alter_livro_isbn_alter_livro_stock.py  0005_alter_carrinho_total.py  0005_livro_data_pub_livro_paginas_livro_sinopse_and_more.py  0006_alter_livro_vendas.py  0006_remove_carrinho_livro.py  0007_coment.py  0007_remove_compra_livro_remove_compralivro_valor_and_more.py  0008_remove_coment_livro_coment_stars.py  0009_coment_livro.py  0010_alter_coment_stars.py  0011_favorite.py  0012_images.py  0013_livro_desconto_alter_compra_total_and_more.py  0014_delete_images.py  0015_remove_livro_capa.py  0016_livro_capa.py  0017_alter_genero_qntlivros.py
back/app/models/: __init__.py  autor.py  carrinho.py  carrinhoLivro.py  coment.py  compra.py  compraLivro.py  favorite.py  genero.py  images.py  livro.py
back/app/serializers/: __init__.py  autor.py  carrinho.py  carrinhoLivro.py  coment.py  compra.py  compraLivro.py  favorite.py  genero.py  images.py  livro.py
back/app/views/: __init__.py  autor.py  carrinho.py  carrinhoLivro.py  (+7 more)
back/config/: decorators.py  settings.py  urls.py
back/usuario/: admin.py  apps.py  forms.py  managers.py  models.py  router.py  serializers.py  views.py
(+112 files in other folders)
